scroll-to-top bottom propose

--- a/src/css/scroll-to-top.css
+++ b/src/css/scroll-to-top.css
@@ -1,6 +1,6 @@
 .scroll-to-top {
     position: fixed;
-    bottom: 20px;
+    bottom: 35px;
     right: 20px;
     width: 40px;
     height: 40px;
@@ -29,4 +29,10 @@
         height: 33px;
     }
 
+}
+
+@media screen and (min-width: 1440px) {
+    .scroll-to-top {
+        bottom: 0;
+    }
 }
