--- a/src/partials/sct-hero.html
+++ b/src/partials/sct-hero.html
@@ -1,5 +1,5 @@
-<div class="hero container">
-    <div class="hero-container">
+<div class="hero">
+    <div class="container">
         <div class="hero-first-part">
             <div class="hero-content">
                 <h2>
