--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,8 +2,8 @@
     <div class="footer-container container">
         <div class="footer-content">
             <div class="footer-logo-socials">
-                <a class="logo" href="./">
-                    <svg class="logo-icon" height="24" width="132">
+                <a class="logo" href="./" aria-label="Your Energy Home Page">
+                    <svg class="logo-icon" height="24" width="132" role="img" aria-hidden="true">
                         <use href="./img/icons.svg#icon-logo"></use>
                     </svg>
                 </a>
