--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="header-container">
             <nav class="header-nav">
-                <a class="logo" href="./">
-                    <svg class="logo-icon" width="132" height="24">
+                <a class="logo" href="./" aria-label="Your Energy Home Page">
+                    <svg class="logo-icon" width="132" height="24" role="img" aria-hidden="true">
                         <use href="./img/icons.svg#icon-logo"></use>
                     </svg>
                 </a>
