--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,6 @@
+/* Normalize */
+@import url('./utils/normalize.css');
+
 /* Common styles */
 @import url('./root.css');
 @import url('./container.css');
