--- a/src/partials/sct-favorites.html
+++ b/src/partials/sct-favorites.html
@@ -1,10 +1,12 @@
 <section class="favorites-page">
-    <h2 class="section-title">Favorites</h2>
-    <div class="quote-wrapper">
-        <load src="partials/quote-of-day.html" />
-        <load src="partials/favorites-static-block.html" />
-        <load src="partials/norm-of-sports.html" />
+    <div class="container">
+        <h2 class="section-title">Favorites</h2>
+        <div class="favorites-blocks-wrapper">
+            <div class="static-wrapper">
+                <load src="partials/quote-of-day.html" />
+                <load src="partials/favorites-static-block.html" />
+            </div>
+            <load src="partials/favorites-dynamic-block.html" />
+        </div>
     </div>
-
-    <load src="partials/favor.html" />
 </section>
