fixed styles and js errors

--- a/src/css/sct-favorites.css
+++ b/src/css/sct-favorites.css
@@ -1,12 +1,15 @@
 .favorites-page {
-    padding-top: 60px;
+    padding: 60px 0 46px;
+}
+
+.favorites-page .section-title {
+    padding-bottom: 20px;
 }
 
 .favorites {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: 40px;
 }
 
 .norm-of-sports {
@@ -17,11 +20,11 @@
 }
 
 .static-wrapper {
-    margin-top: 20px;
     max-width: 335px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    padding-bottom: 40px;
 }
 
 .norm-of-sports-card {
@@ -38,9 +41,8 @@
     height: 100%;
 }
 
-.pagination {
+.favorites-page  .pagination {
     margin-top: 20px;
-    gap: 0px;
 }
 
 .exercise-time {
@@ -57,10 +59,22 @@
     color: var(--color-fav-sports);
 }
 
+.no-favorites {
+    text-align: center;
+    padding: 0 17px;
+}
+
 @media only screen and (min-width: 768px) {
+    .favorites-page {
+        padding-bottom: 100px;
+    }
+    .favorites-page .section-title {
+        padding-bottom: 32px;
+    }
+    
     .static-wrapper {
         max-width: 704px;
-        margin-top: 32px;
+        padding-bottom: 64px;
     }
 
     .norm-of-sports {
@@ -83,17 +97,19 @@
         padding: 25px;
     }
 
-    .pagination {
+    .favorites-page .pagination {
         margin-top: 32px;
     }
 
-    .favorites {
-        margin-top: 56px;
-    }
-
-    .static-wrapper .quote-of-day {
+    .static-wrapper .quote-of-day,
+    .static-wrapper .quote-wrapper {
         width: 100%;
     }
+
+    .no-favorites {
+        text-align: center;
+        padding: 0 75px;
+    }    
 }
 
 .no-paddings {
@@ -109,17 +125,23 @@
         width: 239px;
     }
 
-    .pagination {
+    .favorites-page .pagination {
         display: none;
     }
 
     .favorites-blocks-wrapper {
         display: flex;
-        gap: 32px;
+        justify-content: space-between;
     }
 
     .favorites {
-        margin-top: 32px;
+        width: 852px;
+        max-height: 487px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        padding-right: 16px;
+        scrollbar-width: thin;
+        scrollbar-color: var(--color-fav-scroll-fg) var(--color-fav-scroll-bg);
     }
 
     .favorites-page .container .section-title {
@@ -130,25 +152,32 @@
         width: 405px;
     }
 
-    .favorites-scroll-container {
-        max-height: 550px;
-        overflow-y: scroll;
-        padding-right: 16px;
-        scrollbar-width: thin;
-    }
-
-    .favorites-scroll-container::-webkit-scrollbar {
+    .favorites::-webkit-scrollbar {
         width: 8px;
     }
 
-    .favorites-scroll-container::-webkit-scrollbar-track {
+    .favorites::-webkit-scrollbar-track {
         background: var(--color-fav-scroll-bg);
     }
 
-    .favorites-scroll-container::-webkit-scrollbar-thumb {
-        background-color: var(--color-main-dark);
+    .favorites::-webkit-scrollbar-track {
+        background-color: var(---color-fav-scroll-fg);
         border-radius: 4px;
     }
+
+    .favorites::-moz-scrollbar-button, 
+    .favorites::-webkit-scrollbar-button {
+        width: 0px;
+    }
+
+    .no-favorites {
+        text-align: center;
+        padding: 0 180px;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: center;
+    }
+    
 }
 
 .pagination-button {
@@ -177,6 +206,3 @@
     gap: 8px;
 }
 
-.no-favorites {
-    text-align: center;
-}
