added support for favorites page

--- a/src/css/sct-favorites.css
+++ b/src/css/sct-favorites.css
@@ -125,6 +125,12 @@
         width: 239px;
     }
 
+    .favorites-page .static-block-title {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     .favorites-page .pagination {
         display: none;
     }
@@ -178,6 +184,9 @@
         align-content: center;
     }
     
+    .norm-of-sports-card {
+        width: 239px;
+    }
 }
 
 .pagination-button {
