--- a/src/partials/favorites-static-block.html
+++ b/src/partials/favorites-static-block.html
@@ -4,7 +4,8 @@
             <use href="./img/icons.svg#icon-dumbbell"></use>
         </svg>
 
-        <p class="exercise-time">110 min</p>
+        <h3 class="static-block-title">Today <span class="all-time"></span> / 110 min</h3>
+        <h3 class="static-block-title">You've burnt <span class="calories"></span> kcal today</h3>
         <p class="daily-norm-of-sports">Daily norm of sports</p>
     </li>
     <li class="norm-of-sports-card no-paddings">
