--- a/src/partials/favorites-static-block.html
+++ b/src/partials/favorites-static-block.html
@@ -9,11 +9,12 @@
         <p class="daily-norm-of-sports">Daily norm of sports</p>
     </li>
     <li class="norm-of-sports-card no-paddings">
-        <img 
-            class="women-outdoors-card"
-            src="./img/favorits-women-m.jpg"
-            alt="Women sportswear working out outdoors"
-            style="object-fit: cover"
-        />
+        <picture>
+            <source srcset="./img/favorits-women-m.jpg 1x, ./img/favorits-women-m@2x.jpg 2x" media="(max-width: 767px)" />
+            <source srcset="./img/favorits-women-p.jpg 1x, ./img/favorits-women-p@2x.jpg 2x"
+                media="(min-width: 768px) and (max-width: 1440px)" />
+            <source srcset="./img/favorits-women.jpg 1x, ./img/favorits-women@2x.jpg 2x" media="(min-width: 1441px)" />
+            <img class="women-outdoors-card" style="object-fit: cover" src="./img/favorits-women.jpg" srcset="./img/favorits-women.jpg 1x, ./img/favorits-women@2x.jpg 2x" alt="Women sportswear working out outdoors" />
+        </picture>
     </li>
 </ul>
