--- a/src/css/sct-favorites.css
+++ b/src/css/sct-favorites.css
@@ -167,7 +167,7 @@
     }
 
     .favorites::-webkit-scrollbar-track {
-        background-color: var(---color-fav-scroll-fg);
+        background-color: var(--color-fav-scroll-fg);
         border-radius: 4px;
     }
 
