--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -14,8 +14,8 @@
     display: flex;
     flex-direction: column;
     /*align-items: ;*/
-    justify-content: space-between;
-    gap: 10px
+    justify-content: flex-end;
+    gap: 0;
 }
 
 .timer-block {
@@ -23,6 +23,8 @@
     align-items: center;
     flex-direction: row-reverse;
     gap: 20px;
+    justify-content: center;
+    padding-top: 20px;
 }
 
 
@@ -39,10 +41,12 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        gap: 10px;
     }
 
     .timer-block {
         flex-direction: row;
+        padding: 0;
     }
 
     .exercise-info__actions {
