--- a/src/css/header.css
+++ b/src/css/header.css
@@ -59,7 +59,7 @@ header .logo-icon {
         background: var(--color-main-dark);
         padding: 8px 34px;
         gap: 10px;
-        margin-right: 80px;
+        
     }
 
     .nav-item.active {
@@ -95,6 +95,12 @@ header .logo-icon {
     .header-socials.socials .socials-item:hover .socials-icon,
     .header-socials.socials .socials-item:focus .socials-icon {
         fill: var(--color-main-light);
+    }
+
+    @media only screen and (min-width: 768px)  and (max-width: 1439px){
+        .nav-list {
+            margin-right: 80px;
+        }
     }
 
     @media only screen and (min-width: 1440px) {
