--- a/src/partials/group-list.html
+++ b/src/partials/group-list.html
@@ -1,2 +1,4 @@
-<ul class="group-list"></ul>
-<div class="pagination"></div>
+<div class="group-list-pagination-wrapper">
+    <ul class="group-list"></ul>
+    <div class="pagination"></div>
+</div>
