--- a/src/css/home-block-2.css
+++ b/src/css/home-block-2.css
@@ -1,7 +1,7 @@
 .section-top {
     width: 100%;
     margin: 0 auto;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .section-title {
@@ -61,7 +61,7 @@
         justify-content: space-between;
         align-items: center;
         row-gap: 32px;
-        padding-bottom: 32px;
+        margin-bottom: 32px;
     }
 
     .exercises-menu-button {
