--- a/src/partials/sct-exercises.html
+++ b/src/partials/sct-exercises.html
@@ -1,8 +1,10 @@
-<load src="partials/home-block-2.html" />
-<div class="exercises-group-list container">
-  <div class="static-block-wrapper">
-    <load src="partials/quote-of-day.html" />
-    <load src="partials/exercises-static-block.html" />
+<section class="exercises">
+  <load src="partials/home-block-2.html" />
+  <div class="exercises-group-list container">
+    <div class="static-block-wrapper">
+      <load src="partials/quote-of-day.html" />
+      <load src="partials/exercises-static-block.html" />
+    </div>
+    <load src="partials/group-list.html" />
   </div>
-  <load src="partials/group-list.html" />
-</div>
+</section>
