--- a/src/css/sct-favorites.css
+++ b/src/css/sct-favorites.css
@@ -3,7 +3,7 @@
 }
 
 .favorites-page .section-title {
-    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .favorites {
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .norm-of-sports-card {
@@ -66,15 +66,15 @@
 
 @media only screen and (min-width: 768px) {
     .favorites-page {
-        padding-bottom: 100px;
+        margin-bottom: 100px;
     }
     .favorites-page .section-title {
-        padding-bottom: 32px;
+        margin-bottom: 32px;
     }
     
     .static-wrapper {
         max-width: 704px;
-        padding-bottom: 64px;
+        margin-bottom: 64px;
     }
 
     .norm-of-sports {
@@ -119,6 +119,7 @@
 @media only screen and (min-width: 1440px) {
     .static-wrapper {
         max-width: 494px;
+        margin: 0;
     }
 
     .women-outdoors-card {
