extra fuctional to clear button added

--- a/src/partials/home-block-2.html
+++ b/src/partials/home-block-2.html
@@ -32,17 +32,17 @@
         </form>
         <ul class="exercises-menu-list">
             <li class="exercises-menu-item">
-                <button class="exercises-menu-button active" id="musclesButton">
+                <button class="exercises-menu-button active" id="musclesButton" data-name="muscles">
                     Muscles
                 </button>
             </li>
             <li class="exercises-menu-item">
-                <button class="exercises-menu-button" id="bodyPartsButton">
+                <button class="exercises-menu-button" id="bodyPartsButton" data-name="bodypart">
                     Body parts
                 </button>
             </li>
             <li class="exercises-menu-item">
-                <button class="exercises-menu-button" id="equipmentButtons">
+                <button class="exercises-menu-button" id="equipmentButtons" data-name="equipment">
                     Equipment
                 </button>
             </li>
